# yolo-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
yolotracker/: detector.py  main.py
